# weather_forecast

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prompt.txt  pyproject.toml  requirements.txt
docs/: 260412_Hystory_before_second_big_progon  TZ.docx  execution_plan.md  project_formulation.md  technical_report.html  theory_and_runs.md
docs/paper_artifacts/: README.md
docs/paper_artifacts/forecast/: february_forecast_report.html
docs/paper_artifacts/segmentation_reports/: pressure_segmentation.json  temperature_segmentation.json
docs/paper_artifacts/segments/: pressure_segments.json  temperature_segments.json
docs/paper_artifacts/training_reports/: model_w12h.json  model_w15d.json  model_w24h.json  model_w30d.json  model_w45d.json  model_w7d.json
scripts/: analyze_channel_predictors.py  export_pdf.py  forecast_february.py  prototype_predictor_segmentation.py  run_joint_segmentation.py  run_pressure_segmentation.py  run_temperature_segmentation.py  run_windspeed_segmentation.py  train_joint_two_pass.py  train_pressure_two_pass.py  train_temperature_24h.py  train_temperature_model.py  train_temperature_transformer.py  train_temperature_two_pass.py
segments/: joint_segments.json  windspeed_segments.json
src/weather_patterns/: __init__.py  __main__.py  config.py  models.py  pipeline.py
src/weather_patterns/data/: __init__.py  loading.py
src/weather_patterns/discovery/: __init__.py  base.py  kmeans.py  kmedoids.py  structural.py
src/weather_patterns/events/: __init__.py  extrema.py  peaks.py
src/weather_patterns/io/: __init__.py  (+1 more)
(+22 files in other folders)
